--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier '**/*.{js,jsx,ts,tsx,json}' --write"
+    "format": "prettier '**/*.{js,jsx,ts,tsx,json}' --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.2.4",
@@ -20,7 +21,12 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
     "typescript": "4.7.4"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,json}": "prettier --write --ignore-unknown"
   }
 }
