--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier '**/*.{js,jsx,ts,tsx,json}' --write",
+    "format": "prettier '**/*.{js,jsx,ts,tsx,json}' --write && stylelint '**/*.{css,scss,less}' --fix",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -24,9 +24,12 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
     "typescript": "4.7.4"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx,json}": "prettier --write --ignore-unknown"
+    "**/*.{js,jsx,ts,tsx,json}": "prettier --write --ignore-unknown",
+    "**/*.{css,scss,less}": "stylelint --fix"
   }
 }
