--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
   "lint-staged": {
