--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "4.7.4"
   },
   "lint-staged": {
+    "**/*.{ts,tsx}": "next lint",
     "**/*.{js,jsx,ts,tsx,json}": "prettier --write --ignore-unknown",
     "**/*.{css,scss,less}": "stylelint --fix"
   }
