--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "ethers": "^5.6.9",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
