--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier '**/*.{js,jsx,ts,tsx,json}' --write",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "lint:style": "eslint 'src/**/*.{css,scss,less}' --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1",
+    "stylelint": "^14.10.0",
+    "stylelint-config-standard": "^27.0.0"
   }
 }
