--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "stylelint": "^14.10.0",
-    "stylelint-config-standard": "^27.0.0"
+    "stylelint-config-standard": "^27.0.0",
+    "tailwindcss": "^3.1.8"
   }
 }
