--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -28,4 +28,5 @@ jobs:
           project_name: token-migration
           prod_mode: true
           enable_cache: true
+          enable_notify_comment: true
 
