Config action notify slack channel

--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -29,4 +29,7 @@ jobs:
           prod_mode: true
           enable_cache: true
           enable_notify_comment: true
+          enable_notify_slack: true
+          slack_channel: darwinia-apps
+          slack_webhook: ${{ secrets.SLACK_INCOMING_WEBHOOK_URL }}
 
